Security + Venafi + VCF backup-restore and diagnostics content (7 files)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>